2006-06-19  Richard Guenther  <rguenther@suse.de>

	* ggc-page.c (extra_order_size_tab): Add entries with
	size of struct function and basic_block.
	(size_lookup): Extend to cover sizes up to 511.
	(ggc_alloc_stat): Adjust user.
	(ggc_pch_count_object): Likewise.
	(ggc_pch_alloc_object): Likewise.
	(ggc_pch_write_object): Likewise.

2006-06-19  Zdenek Dvorak <dvorakz@suse.cz>

	* tree-ssa-loop-niter.c (implies_ge_p): New function.
	(derive_constant_upper_bound): Handle OP0 - CST in unsigned types
	correctly.

2006-06-19  Denis Chertykov  <denisc@overta.ru>

	* config/avr/libgcc.S : Correct my wrong previous commit.

2006-06-19  Roger Sayle  <roger@eyesopen.com>

	PR target/27861
	* expmed.c (expand_shift): On SHIFT_COUNT_TRUNCATED targets, we may
	have stripped a SUBREG from the shift count, so we may need to
	convert_to_mode back to the type's mode before calling make_tree.
	Use new_amount instead of amount to avoid expanding a tree twice.

2006-06-19  Richard Guenther  <rguenther@suse.de>

	PR middle-end/28045
	* fold-const.c (operand_equal_p): Check if the argument types
	have the same precision before stripping NOPs.

2006-06-19  Daniel Berlin  <dberlin@dberlin.org>

	Fix PR tree-optimization/27341
	* tree-cfg.c (gimplify_val): Call mark_new_vars_to_rename on the
	statement we get.
	* tree-complex.c (pass_lower_complex): Update SMT usage.	

2006-06-19  Andreas Krebbel  <krebbel1@de.ibm.com>

	* config/s390/s390.md ("doloop_si64", "doloop_si31", "doloop_di"): 
	Add a new alternative to the constraint strings. Add move of
	operand 1 to 3 to the splitter definition.
	("doloop_si_long"): Second contraint alternative removed.

2006-06-08  Anatoly Sokolov <aesok@post.ru>

	* config/avr/avr.h (avr_have_movw_lpmx_p): Declare.
	(TARGET_CPU_CPP_BUILTINS): Add __AVR_HAVE_MOVW__ and 
	__AVR_HAVE_LPMX__.
	(AVR_HAVE_MOVW) Define.
	(ASSEMBLER_DIALECT): Use AVR_HAVE_MOVW.
	(ASM_SPEC): Add avr25.
	(LINK_SPEC): Add avr25.
	* config/avr/avr.c (avr_have_movw_lpmx_p): Add.